--- a/app/src/main/res/drawable/layout_border.xml
+++ b/app/src/main/res/drawable/layout_border.xml
@@ -3,8 +3,8 @@
     <layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
         <item>
             <shape android:shape="rectangle">
-                <stroke android:width="3dp" android:color="#FF000000" />
-                <solid android:color="#FFFFFFFF" />
+                <stroke android:width="3dp" android:color="#FF1493" />
+                <solid android:color="#9400D3" />
             </shape>
         </item>
     </layer-list>
