--- a/app/src/main/res/layout/activity_detail_memo.xml
+++ b/app/src/main/res/layout/activity_detail_memo.xml
@@ -4,10 +4,6 @@
     android:id="@+id/activity_detail_memo"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.daisy.simplememo.DetailMemoActivity">
     <ScrollView
         android:layout_width="match_parent"
@@ -17,19 +13,25 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </ScrollView>
-    <Button
-        android:id="@+id/btn_modify_memo"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Modify"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"/>
-    <Button
-        android:id="@+id/btn_delete_memo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Delete"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true">
+        <Button
+            android:id="@+id/btn_modify_memo"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/btn_modify_memo"
+            android:layout_alignParentLeft="true"
+            android:layout_width="wrap_content" />
+        <Button
+            android:id="@+id/btn_delete_memo"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_delete_memo"
+            android:layout_weight="1"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_width="wrap_content" />
+    </LinearLayout>
 </RelativeLayout>
